ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Buying_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>EU_Buying_Group_Description__c</fullName>
    <label>Buying Group Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blanco</fullName>
            </value>
            <value>
                <fullName>NLKL 4+-GROEP (NL)</fullName>
            </value>
            <value>
                <fullName>NLKL BMN BOUWMATERIALEN (NL)</fullName>
            </value>
            <value>
                <fullName>NLKL Baustoff + Metall (NL)</fullName>
            </value>
            <value>
                <fullName>NLKL Groothandel (NL)</fullName>
                <label>NLKL GROOTHANDEL (NL)</label>
            </value>
            <value>
                <fullName>NLKL IMBOUW LEDEN (NL)</fullName>
            </value>
            <value>
                <fullName>NLKL RAAB KARCHER (NL)</fullName>
            </value>
            <value>
                <fullName>NLKL:41-49-54-45-45-37-44</fullName>
            </value>
            <value>
                <fullName>NLKL:43-50-49-43,5-43,5-37-46,</fullName>
            </value>
            <value>
                <fullName>NLKL:44-47-48-45-45-39-45</fullName>
            </value>
            <value>
                <fullName>NLKL:46-51-48-45-45-39-43</fullName>
            </value>
            <value>
                <fullName>NLKL:48,5-53,5-53,5-45-45-39-4</fullName>
            </value>
            <value>
                <fullName>NLKL:48-53-50-45-45-39-44</fullName>
            </value>
            <value>
                <fullName>NLKL:49-53,8-51,5-45-45-39-44</fullName>
            </value>
            <value>
                <fullName>blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>