ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Buying_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Buying_Group_ID__c</fullName>
    <label>Buying Group ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>