ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Buying_Society__c.field-meta.xml
<CustomField>
    <fullName>EU_Buying_Society__c</fullName>
    <label>Buying Group (Society)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nmbs</fullName>
            </value>
            <value>
                <fullName>Unimer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>