ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_CoCust_Key__c.field-meta.xml
<CustomField>
    <fullName>EU_CoCust_Key__c</fullName>
    <label>Co/Cust Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>