ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_Company_Number__c</fullName>
    <label>Company Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>