ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>EU_Contact_Fax__c</fullName>
    <label>Contact Fax</label>
    <type>Phone</type>
</CustomField>