ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Contact_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>EU_Contact_Phone_3__c</fullName>
    <label>Contact Phone 3</label>
    <type>Phone</type>
</CustomField>