ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>EU_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>