ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>EU_Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>