ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Credit_Rating_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Credit_Rating_ID__c</fullName>
    <label>Credit Rating ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>