ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Credit_Remaining__c.field-meta.xml
<CustomField>
    <fullName>EU_Credit_Remaining__c</fullName>
    <formula>EU_Credit_Limit__c - EU_Amount_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>