ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_CRM_Status__c.field-meta.xml
<CustomField>
    <fullName>EU_CRM_Status__c</fullName>
    <description>CRM status</description>
    <label>CRM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Request Create Customer</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Old customer number</fullName>
            </value>
            <value>
                <fullName>Non-buying</fullName>
            </value>
            <value>
                <fullName>Out of business</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>