ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Customer_Class__c.field-meta.xml
<CustomField>
    <fullName>EU_Customer_Class__c</fullName>
    <label>Customer Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>.</fullName>
            </value>
            <value>
                <fullName>ASPHALTCO NV</fullName>
            </value>
            <value>
                <fullName>ATAB B.V.</fullName>
            </value>
            <value>
                <fullName>ATAB NV</fullName>
            </value>
            <value>
                <fullName>BITASCO TRADING BV</fullName>
            </value>
            <value>
                <fullName>Contracting</fullName>
            </value>
            <value>
                <fullName>DIY</fullName>
            </value>
            <value>
                <fullName>ERROR CODE</fullName>
            </value>
            <value>
                <fullName>Export Asia</fullName>
            </value>
            <value>
                <fullName>Export Scandinavia</fullName>
            </value>
            <value>
                <fullName>HOUSE</fullName>
            </value>
            <value>
                <fullName>IG INDUSTRIES NV</fullName>
            </value>
            <value>
                <fullName>IKO BV</fullName>
            </value>
            <value>
                <fullName>Iko Insulations FR SAS</fullName>
            </value>
            <value>
                <fullName>IKO Insulations UK</fullName>
            </value>
            <value>
                <fullName>IKO NV</fullName>
            </value>
            <value>
                <fullName>IKO PACIFIC INC.</fullName>
            </value>
            <value>
                <fullName>IKO PLC</fullName>
            </value>
            <value>
                <fullName>IKO Protect</fullName>
            </value>
            <value>
                <fullName>IKO SINGLE PLY SYSTEMS</fullName>
            </value>
            <value>
                <fullName>Independent Insulation</fullName>
            </value>
            <value>
                <fullName>Insulation Dist</fullName>
            </value>
            <value>
                <fullName>Insulation UK</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Intercompany Distributors</fullName>
            </value>
            <value>
                <fullName>IRELAND DIVISION</fullName>
            </value>
            <value>
                <fullName>Liquids Division</fullName>
            </value>
            <value>
                <fullName>MERCHANTS</fullName>
            </value>
            <value>
                <fullName>NEBIPPROFA</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>