ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Customer_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>EU_Customer_Class_Code__c</fullName>
    <label>Customer Class Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3OT</fullName>
            </value>
            <value>
                <fullName>ICC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>