ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>EU_Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AANNEMER KLEIN (41317)</fullName>
            </value>
            <value>
                <fullName>AANNEMER WEGENBOUW (41319)</fullName>
            </value>
            <value>
                <fullName>ALGEMEEN (41300)</fullName>
            </value>
            <value>
                <fullName>ALGEMENE AANNEMING (2129)</fullName>
            </value>
            <value>
                <fullName>ALGEMENE AANNEMING (2241)</fullName>
            </value>
            <value>
                <fullName>ARCHITECTEN/ADVIESBURO&apos;S (41372)</fullName>
            </value>
            <value>
                <fullName>ASFALTEURS (2231)</fullName>
            </value>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>BOUWMATERIALEN GROOT (41325)</fullName>
            </value>
            <value>
                <fullName>BOUWMATERIALEN KLEIN (41320)</fullName>
            </value>
            <value>
                <fullName>BOUWPROMOTIE - PROJECTONTWIK (2243)</fullName>
            </value>
            <value>
                <fullName>DAKDEKKER (2171)</fullName>
            </value>
            <value>
                <fullName>DAKDEKKER GROOT (41335)</fullName>
            </value>
            <value>
                <fullName>DAKDEKKER KLEIN (41330)</fullName>
            </value>
            <value>
                <fullName>DAKDEKKER MIDDELGROOT (41333)</fullName>
            </value>
            <value>
                <fullName>DAKDEKKER/HANDELAAR (41337)</fullName>
            </value>
            <value>
                <fullName>DAKDEKKERS (2232)</fullName>
            </value>
            <value>
                <fullName>DAKDEKKERS-LOODGIETERS-ONDHOUD (2233)</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTION CHANNEL</fullName>
            </value>
            <value>
                <fullName>DIY</fullName>
            </value>
            <value>
                <fullName>DIY HANDELAARS (2212)</fullName>
            </value>
            <value>
                <fullName>EXPORT (2280)</fullName>
            </value>
            <value>
                <fullName>HANDEL SPECIAAL DAKMATERIAAL (41338)</fullName>
            </value>
            <value>
                <fullName>HANDELSONDERNEMING ALGEMEEN (41329)</fullName>
            </value>
            <value>
                <fullName>HOUTHANDEL (41326)</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE (2252)</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE ALGEMEEN (41359)</fullName>
            </value>
            <value>
                <fullName>INDUSTRIE PRODUCTIE (2180)</fullName>
            </value>
            <value>
                <fullName>INSTALLATIEBEDRIJF (41307)</fullName>
            </value>
            <value>
                <fullName>INTERGROEP (2274)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>