ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_E_mail_Order_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>EU_E_mail_Order_Confirmation__c</fullName>
    <label>E-mail Order Confirmation</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>