ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_ERP_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>EU_ERP_Create_Date__c</fullName>
    <label>ERP Create Date</label>
    <type>Date</type>
</CustomField>