ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_ERP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_ERP_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>ERP Customer Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>