ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_ERP_Sales_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_ERP_Sales_Rep_ID__c</fullName>
    <label>ERP Sales Rep ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>