ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Extract_Date__c.field-meta.xml
<CustomField>
    <fullName>EU_Extract_Date__c</fullName>
    <label>Extract Date</label>
    <type>Date</type>
</CustomField>