ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Financial_Division__c.field-meta.xml
<CustomField>
    <fullName>EU_Financial_Division__c</fullName>
    <label>Financial Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EU_Financial_Division</valueSetName>
    </valueSet>
</CustomField>