ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Item_Ind_Class_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Item_Ind_Class_ID__c</fullName>
    <label>Item Ind Class ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>