ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Item_Industry_Class__c.field-meta.xml
<CustomField>
    <fullName>EU_Item_Industry_Class__c</fullName>
    <label>Item Industry Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sold-to Customer</fullName>
            </value>
            <value>
                <fullName>Ship-to Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>