ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Lang_Code__c.field-meta.xml
<CustomField>
    <fullName>EU_Lang_Code__c</fullName>
    <label>Lang Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>