ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>EU_Last_Order_Date__c</fullName>
    <label>Last Order Date</label>
    <type>Date</type>
</CustomField>