ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Legacy_ERP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_Legacy_ERP_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Customer No.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>