ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>EU_LinkedIn__c</fullName>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>