ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Market_Analysis_Code__c.field-meta.xml
<CustomField>
    <fullName>EU_Market_Analysis_Code__c</fullName>
    <label>Market Analysis Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Step Distributor</fullName>
            </value>
            <value>
                <fullName>2 Step Distributor</fullName>
            </value>
            <value>
                <fullName>ERROR CODE</fullName>
            </value>
            <value>
                <fullName>Intergroup</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>No Value</fullName>
            </value>
            <value>
                <fullName>Paving</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Roofer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>