ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Marketing_Analysis_Description__c.field-meta.xml
<CustomField>
    <fullName>EU_Marketing_Analysis_Description__c</fullName>
    <label>Marketing Analysis Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>