ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>