ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Product_Group_Id_1__c.field-meta.xml
<CustomField>
    <fullName>EU_Product_Group_Id_1__c</fullName>
    <label>Product Group Id 1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>