ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Product_Group_Sales_2__c.field-meta.xml
<CustomField>
    <fullName>EU_Product_Group_Sales_2__c</fullName>
    <label>Product Group Sales 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>