ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>EU_Referral_Type__c</fullName>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Main Contractor</fullName>
            </value>
            <value>
                <fullName>SIG D&amp;T</fullName>
            </value>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>