ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>EU_Sales_Rep_Name__c</fullName>
    <label>Sales Rep Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>