ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Sales_YTD__c.field-meta.xml
<CustomField>
    <fullName>EU_Sales_YTD__c</fullName>
    <label>Sales YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>