ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>EU_Terms_Code__c</fullName>
    <label>Terms Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>