ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Territory__c.field-meta.xml
<CustomField>
    <fullName>EU_Territory__c</fullName>
    <description>To store the Territory coming from ERP</description>
    <label>ERP Territory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>