ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Territory_ID__c</fullName>
    <label>ERP Territory ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>