ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Trade_Organisations__c.field-meta.xml
<CustomField>
    <fullName>EU_Trade_Organisations__c</fullName>
    <label>Trade Organisations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAC Member</fullName>
            </value>
            <value>
                <fullName>NFRC Member</fullName>
            </value>
            <value>
                <fullName>NMBS Member</fullName>
            </value>
            <value>
                <fullName>SPRA Member Access</fullName>
            </value>
            <value>
                <fullName>IKO Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>