ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>