ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Volume_Amount_YTD_Actual__c.field-meta.xml
<CustomField>
    <fullName>EU_Volume_Amount_YTD_Actual__c</fullName>
    <label>Volume Amount YTD Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>