ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Volume_Product__c.field-meta.xml
<CustomField>
    <fullName>EU_Volume_Product__c</fullName>
    <label>Volume Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>