ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_YTD_Actual_1__c.field-meta.xml
<CustomField>
    <fullName>EU_YTD_Actual_1__c</fullName>
    <label>YTD Actual 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>