ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_YTD_Last_Year_2__c.field-meta.xml
<CustomField>
    <fullName>EU_YTD_Last_Year_2__c</fullName>
    <label>YTD Last Year 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>